apps/editor/src/css/editor.css
/* ... */
.tui-editor .te-md-splitter {
  display: none;
  position: absolute;
  left: 50%;
  top: 0;
  height: 100%;
  width: 1px;
  border-left: 1px solid #e5e5e5;
}

.tui-editor .te-preview-style-vertical .te-md-splitter {
  display: block;
}

.te-ww-container {
  display: none;
  overflow: hidden;
  z-index: 10;
  height: inherit;
  background-color: #fff;
}

.te-ww-container > .te-editor {
  overflow: auto;
  height: inherit;
}

.te-ww-container .tui-editor-contents:focus {
  outline: none;
}

.te-ww-container .tui-editor-contents {
  padding: 0 25px;
}

.te-ww-container .tui-editor-contents:first-child {
  box-sizing: border-box;
  margin: 0px;
  padding: 16px 25px 0px 25px;
  height: inherit;
}

.te-ww-container .tui-editor-contents:last-child {
  margin-bottom: 16px;
}

.te-md-mode .te-md-container {
  display: block;
  z-index: 100;
}

.te-ww-mode .te-ww-container {
  display: block;
  z-index: 100;
}

.tui-editor.te-hide,
.tui-editor-defaultUI.te-hide {
  display: none;
}

.tui-editor-defaultUI .CodeMirror-lines {
  padding-top: 18px;
  padding-bottom: 18px;
}

.tui-editor-defaultUI pre.CodeMirror-line {
  padding-left: 25px;
  padding-right: 25px;
}

.tui-editor-defaultUI .CodeMirror pre.CodeMirror-placeholder {
  margin: 0;
  padding-left: 25px;
  color: grey;
}

.tui-editor-defaultUI .CodeMirror-scroll {
  cursor: text;
}

/* Essential element style */
.tui-editor-contents td.te-cell-selected {
  background-color: #d8dfec;
}
.tui-editor-contents td.te-cell-selected::selection {
  background-color: #d8dfec;
}
.tui-editor-contents th.te-cell-selected {
  background-color: #908f8f;
}
.tui-editor-contents th.te-cell-selected::selection {
  background-color: #908f8f;
}

/* default UI Styles */
.tui-editor-defaultUI {
  position: relative;
  border: 1px solid #e5e5e5;
  height: 100%;
  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', '나눔바른고딕',
    'Nanum Barun Gothic', '맑은고딕', 'Malgun Gothic', sans-serif;
}

.tui-editor-defaultUI button {
  color: #fff;
  padding: 0px 14px 0px 15px;
  height: 28px;
  font-size: 12px;
  border: none;
  cursor: pointer;
  outline: none;
}
.tui-editor-defaultUI button.te-ok-button {
  background-color: #4b96e6;
}
.tui-editor-defaultUI button.te-close-button {
  background-color: #777;
}

.tui-editor-defaultUI-toolbar {
  padding: 0 25px;
  height: 31px;
  background-color: #fff;
  border: 0;
  overflow: hidden;
}

.tui-toolbar-divider {
  float: left;
  display: inline-block;
  width: 1px;
  height: 14px;
  background-color: #ddd;
  margin: 9px 6px;
}

.tui-toolbar-button-group {
  height: 28px;
  border-right: 1px solid #d9d9d9;
  float: left;
}

.te-toolbar-section {
  height: 32px;
  box-sizing: border-box;
  border-bottom: 1px solid #e5e5e5;
}

.tui-editor-defaultUI-toolbar button {
  float: left;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  background-color: #fff;
  width: 22px;
  height: 22px;
  padding: 3px;
  border-radius: 0;
  margin: 5px 3px;
  border: 1px solid #fff;
}

.tui-editor-defaultUI-toolbar button:hover,
.tui-editor-defaultUI-toolbar button:active,
.tui-editor-defaultUI-toolbar button.active {
  border: 1px solid #aaa;
  background-color: #fff;
}

.tui-editor-defaultUI-toolbar button:first-child {
  margin-left: 0;
}

.tui-editor-defaultUI-toolbar button:last-child {
  margin-right: 0;
}

.tui-editor-defaultUI-toolbar button.tui-scrollsync {
  width: auto;
  color: #777777;
  border: 0;
}

.tui-editor-defaultUI button.tui-scrollsync:after {
  content: 'Scroll off';
}

.tui-editor-defaultUI button.tui-scrollsync.active {
  color: #4b96e6;
  font-weight: bold;
}

.tui-editor-defaultUI button.tui-scrollsync.active:after {
  content: 'Scroll on';
}

.tui-editor-defaultUI .te-mode-switch-section {
  background-color: #f9f9f9;
  border-top: 1px solid #e5e5e5;
  height: 20px;
  font-size: 12px;
}

.tui-editor-defaultUI .te-mode-switch {
  float: right;
  height: 100%;
}

.tui-editor-defaultUI .te-switch-button {
  width: 92px;
  height: inherit;
  background: #e5e5e5;
  outline: 0;
  color: #a0aabf;
  cursor: pointer;
  border: 0;
  border-left: 1px solid #ddd;
  border-right: 1px solid #ddd;
}

.tui-editor-defaultUI .te-switch-button.active {
  background-color: #fff;
  color: #000;
}

.tui-editor-defaultUI .te-markdown-tab-section {
  float: left;
  height: 31px;
  background: #fff;
}

.te-markdown-tab-section .te-tab {
  margin: 0 -7px 0 24px;
  background: #fff;
}

.tui-editor-defaultUI .te-tab button {
  box-sizing: border-box;
  line-height: 100%;
  position: relative;
  cursor: pointer;
  z-index: 1;
  font-size: 13px;
  background-color: #f9f9f9;
  border: solid 1px #e5e5e5;
  border-top: 0;
  padding: 0 9px;
  color: #777;
  border-radius: 0;
  outline: 0;
}

.te-markdown-tab-section .te-tab button:last-child {
  margin-left: -1px;
}

.te-markdown-tab-section .te-tab button.te-tab-active,
.te-markdown-tab-section .te-tab button:hover.te-tab-active {
  background-color: #fff;
  color: #333;
  border-bottom: 1px solid #fff;
  z-index: 2;
}

.te-markdown-tab-section .te-tab button:hover {
  background-color: #fff;
  color: #333;
}

.tui-popup-modal-background {
  background-color: rgba(202, 202, 202, 0.6);
  position: fixed;
  margin: 0px;
  left: 0px;
  top: 0px;
  width: 100%;
  height: 100%;
  z-index: 9999;
}

.tui-popup-wrapper.fit-window,
.tui-popup-modal-background.fit-window .tui-popup-wrapper {
  width: 100%;
  height: 100%;
}

.tui-popup-wrapper {
  width: 500px;
  margin-right: auto;
  border: 1px solid #cacaca;
  background: white;
  z-index: 9999;
}

.tui-popup-modal-background .tui-popup-wrapper {
  position: absolute;
  margin: auto;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.tui-popup-header {
  padding: 10px;
  height: auto;
  line-height: normal;
  position: relative;
  border-bottom: 1px solid #cacaca;
}

.tui-popup-header .tui-popup-header-buttons {
  float: right;
}
/* ... */

